# Kaggle-tools

./: .gitignore  .pre-commit-config.yaml  README.md  adversarial_validation.ipynb  create_ridge_ensemble.ipynb  cv-experimentation-flaml-per-fold-v2.ipynb  cv-experimentation-flaml-per-fold_archive.ipynb  cv-experimentation-se5-ep12.ipynb  eda.ipynb  insurance.ipynb  kaggle-cv-experiment-v2.ipynb  kaggle_cv_experiment.ipynb  loan_prediction.ipynb  loan_prediction_experimentation.py  main.py  mental_health.ipynb  mmd.ipynb  nn_pytorch_starter_with_optuna.ipynb  optuna_hyperparameter_optimization_kaggle.ipynb  poisonous_mushroom_classification.ipynb  population_of_baselgbm.npy  population_of_baselgbm_loan.npy  pyproject.toml  requirements.txt  run_automl_grandmasters_autogluon.ipynb  sample-kernel-metadata.json  se5-ep12 copy.ipynb  se5-ep12.ipynb  setup.py  test.ipynb  test_pytorch_model_loan.ipynb  tuning-final-lgbm.ipynb  used_car_experimentation.py  used_car_notebook.ipynb
.devcontainer/: Dockerfile  devcontainer.json
catboost_info/: catboost_training.json  learn_error.tsv  test_error.tsv  time_left.tsv
docs/: agent-notes.md  refactor.md
ktools/: __init__.py  definitions.py  logger_setup.py
lb_cv_tables/: insurance.numbers  loan_approval.numbers  mental_health.numbers  post_hct_survival.numbers
notebooks/: autogluon_model.ipynb  checking_categorical_versions_of_features.ipynb  drw_data_exploration.ipynb  trainer_sample_notebook.ipynb
post_HCT_survival_notebooks/: baseline_notebook.ipynb  custom_hct_pairwise_neural_net.py  custom_modules.py  hct_utils.py  (+15 more)
(+226 files in other folders)
