[project]
name = "kaggle-tools"
version = "0.0.5"
description = "A repository of tools to use for kaggle competitions"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "autogluon-tabular>=1.4.0",
    "catboost>=1.2.8",
    "flaml>=2.3.6",
    "gpytorch>=1.14.3",
    "h2o>=3.46.0.9",
    "hillclimbers>=0.1.4",
    "ipykernel>=7.1.0",
    "kaggle>=1.8.2",
    "lifelines>=0.30.0",
    "lightautoml>=0.4.1",
    "lightgbm>=4.6.0",
    "lightning>=2.6.0",
    "matplotlib>=3.10.7",
    "numpy>=1.26.4",
    "openfe>=0.0.12",
    "optuna>=4.6.0",
    "pandas>=2.3.3",
    "parameterized>=0.9.0",
    "pydot>=4.0.1",
    "pytest>=9.0.1",
    "pytorch-tabnet>=4.1.0",
    "rich>=14.2.0",
    "scikit-learn>=1.7.2",
    "scipy>=1.16.3",
    "seaborn>=0.13.2",
    "shap>=0.49.1",
    "tensorflow>=2.18.1",
    "torch==2.3.1",
    "torchaudio==2.3.1",
    "torchvision==0.18.1",
    "xgboost>=2.1.4",
    "ipywidgets==8.1.8",
    "kaleido==0.2.1",
    "mlflow>=3.7.0",
    "pre-commit>=4.5.0",
    "pyfiglet>=1.0.4",
    "pip>=25.3",
]
